--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
+
 <body>
 
   <!-- HERO -->
@@ -30,12 +32,12 @@
 
   <!-- MISSION -->
   <section class="mission" data-aos="fade-up">
-    <h1 class="mission-title">HOME RENOVATIONS MADE EASY</h1>
+    <h1 class="mission-title">HOME RENOVATION MADE EASY</h1>
     <p class="mission-text">
       At Aero Home Renovation, our mission is simple — to deliver top quality work, reliable service, and trusted
       solutions to every home project. We thrive on commitment, customer service, and creativity. We do anything
-      from decks, drywall and flooring, to full home moving and yardcare (including sprinkler system installation).
-      Whether it is a deck, basement or kitchen, leave it to us for a finishing shine!
+      from decks, drywall and flooring, to full home moving and yard service. Whether it is a deck, basement or
+      kitchen, leave it to us for a smooth finish!
     </p>
   </section>
 
@@ -43,91 +45,168 @@
   <section class="services" data-aos="fade-up">
     <h1 class="services-title">OUR SERVICES</h1>
 
-    <!-- OUTDOOR -->
-    <div class="service-category" onclick="toggleSection(this)" data-aos="fade-up">
-      <h2>OUTDOOR</h2>
-      <div class="jobs">
-        <div class="job-card" data-aos="fade-up">
-          <img src="images/deckvinyl.webp" alt="Deck Vinyl">
-          <div class="job-info">
-            <h3 class="job-title">Deck Vinyl Installation</h3>
-            <p>Professional deck vinyl installation to protect and elevate your outdoor space.</p>
-          </div>
-        </div>
-        <div class="job-card" data-aos="fade-up">
-          <img src="images/yardcare.webp" alt="Yard Care">
-          <div class="job-info">
-            <h3 class="job-title">Yard Care</h3>
-            <p>Complete yard care services to keep your lawn healthy and stunning year-round.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <!-- INDOOR -->
     <div class="service-category" onclick="toggleSection(this)" data-aos="fade-up">
-      <h2>INDOOR</h2>
+      <h2>INDOOR 🏠</h2>
       <div class="jobs">
         <div class="job-card" data-aos="fade-up">
           <img src="images/flooring.webp" alt="Flooring">
           <div class="job-info">
             <h3 class="job-title">Flooring Installation</h3>
-            <p>Elegant wood flooring installations that transform your living spaces.</p>
+            <p>Elegant wood flooring installations that drastically transfrom
+              your living spaces. We offer installations over preexisting
+              concrete and wood floors, ensuring the wood looks as natural as
+              possible, while being durable and low maintenance. Reach out to us
+              for wood options & color schemes to make the most of your home.
+            </p>
           </div>
         </div>
+
         <div class="job-card" data-aos="fade-up">
           <img src="images/drywall.webp" alt="Drywall">
           <div class="job-info">
-            <h3 class="job-title">Drywall & Remodel</h3>
-            <p>Expert drywall repair and remodeling to refresh and restore interiors.</p>
+            <h3 class="job-title">Drywall & Remodeling</h3>
+            <p>Expert drywall repair and remodeling to refresh and restore interiors.
+              We offer drywall repair for small blemishes, and up to entire section
+              replacements, with mudding and sanding to ensure a perfect, level
+              finish ready for beatiful paint.
+            </p>
           </div>
         </div>
+
         <div class="job-card" data-aos="fade-up">
           <img src="images/painting.webp" alt="Painting">
           <div class="job-info">
-            <h3 class="job-title">Interior Painting</h3>
-            <p>Clean, precise interior painting for a polished, professional finish.</p>
+            <h3 class="job-title">Painting & Finish</h3>
+            <p>We specialize in painting and and beautifying your home. Whether it's a
+              fence, shed, or your entire house, no painting job is too big for us. We
+              are experts in colors, technique and what looks best, so do not hesitate
+              to speak with us and get the quality work you are looking
+            </p>
           </div>
         </div>
+
+      </div>
+    </div>
+
+    <!-- OUTDOOR -->
+    <div class="service-category" onclick="toggleSection(this)" data-aos="fade-up">
+      <h2>OUTDOOR 🌱</h2>
+      <div class="jobs">
+        <div class="job-card" data-aos="fade-up">
+          <img src="images/deckvinyl.webp" alt="Deck Vinyl">
+          <div class="job-info">
+            <h3 class="job-title">Deck Vinyl Installation</h3>
+            <p>Professional deck vinyl installation to protect and elevate your deck.
+              This ensures a waterproof, visually pleasing & low maintenance outdoor space.
+              Speak with us about color options, vinyl types and styling aesthetics to
+              transfrom your outdoor space today.
+            </p>
+          </div>
+        </div>
+
+        <div class="job-card" data-aos="fade-up">
+          <img src="images/yardcare.webp" alt="Yard Care">
+          <div class="job-info">
+            <h3 class="job-title">Yard Services</h3>
+            <p>Yard care and services to keep your yards healthy and stunning year round.
+              Our yard services include, but are not limited to:</p>
+            <ul>
+              <li>Lawn mowing, edging & trimming</li>
+              <li>Seasonal clean-ups (spring and fall)</li>
+              <li>Fertilization and weed control</li>
+              <li>Tree, shrub & hedge trimming</li>
+              <li>Aeration and overseeding</li>
+              <li>Snow removal (seasonal)</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="job-card" data-aos="fade-up">
+          <img src="images/sprinklerinstall.webp" alt="Underground Sprinklers">
+          <div class="job-info">
+            <h3 class="job-title">Underground Sprinkler Installation</h3>
+            <p>Thinking about an underground sprinkler system? Leave it to us to
+              manage it for you. Our sprinkler systems are industry standard, and
+              include cutting edge features, controllable from your smartphone.
+              Reach out to us to discuss your yard watering needs.
+            </p>
+          </div>
+        </div>
+
       </div>
     </div>
 
     <!-- MOVING & MORE -->
     <div class="service-category" onclick="toggleSection(this)" data-aos="fade-up">
-      <h2>MOVING & MORE!</h2>
+      <h2>MOVING & MORE 🚚</h2>
       <div class="jobs">
+
+        <!-- Job 1: Moving Services -->
         <div class="job-card" data-aos="fade-up">
           <img src="images/moving.webp" alt="Moving">
           <div class="job-info">
             <h3 class="job-title">Moving Services</h3>
-            <p>Efficient moving and relocation services for homes, apartments, and offices.</p>
+            <p>Changing homes? We're here to help! Moving can be stressful and complex,
+              but with the right equipment and logistics from us, it's as easy as it gets.
+              We will:</p>
+            <li>Take a look, and estimate the time it will take ✔️</li>
+            <li>Manage vehicles, and do all the heavy lifting ourselves ✔️</li>
+            <li>Disassemble and reassemble all furniture back the way it was ✔️</li>
+            <li>Optionally pack all items ✔️</li>
+            <li>Load & unload all items with extra care ✔️</li>
+            <li>Safely transport your home items to the new location ✔️</li>
+            <li>Help with unpacking and assembly, ensuring a smooth process ✔️</li>
+            <p>Please reach out to us and get moving today!</p>
           </div>
         </div>
+
+        <!-- Job 2: Dump & Junk Removal -->
         <div class="job-card" data-aos="fade-up">
           <img src="images/dump.webp" alt="Dump Service">
           <div class="job-info">
             <h3 class="job-title">Dump & Junk Removal</h3>
-            <p>Fast junk removal and dump runs to keep your property clutter-free.</p>
+            <p>We offer clutter and junk removal, no matter the size or amount. Anything
+              from organics (grass, tree bark or yard leftovers), to hard materials
+              that just need to be gone. We offer timely service for cleaner, better homes.
+            </p>
           </div>
         </div>
+
+        <!-- Job 3: Handywork -->
+        <div class="job-card" data-aos="fade-up">
+          <img src="images/handywork.webp" alt="General Labor">
+          <div class="job-info">
+            <h3 class="job-title">Handywork</h3>
+            <p>Need a hand with lifting, a faucet fix/replacement or anything else
+              around the house? We've got your back! We do anything from from a fix,
+              a replacement, all the way to installations. Let us know how we can help,
+              and get what you need done today in a timely manner with friendly service.
+            </p>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
 
   <!-- CONTACT -->
-  <section class="contact" data-aos="fade-up">
-    <h2>Contact Us</h2>
-    <form action="https://formsubmit.co/aerohomerenovations@gmail.com" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
+<section class="contact" data-aos="fade-up">
+  <h2>Contact Us</h2>
+  <p class="contact-subtitle">Get A Quote - it's free!</p>
+  <form action="https://formsubmit.co/aerohomerenovations@gmail.com" method="POST">
+    <input type="text" name="name" placeholder="Your Name" required />
+    <input type="email" name="email" placeholder="Your Email" required />
+    <input type="tel" name="phone" placeholder="Your Phone Number (Optional - Preferred)" />
+    <textarea name="message" placeholder="Your Message (Please be detailed)" required></textarea>
+    <button type="submit">Send Message</button>
+  </form>
+</section>
+
 
   <!-- FOOTER -->
   <footer class="fade-in">
-    <p>© 2025 Aero Home Renovations. All rights reserved.</p>
+    <p>© 2025 Aero Home Renovation. All rights reserved.</p>
   </footer>
 
   <!-- AOS Script -->
@@ -141,4 +220,5 @@
   <script src="script.js"></script>
 
 </body>
+
 </html>
