--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <img src="images/flooring.webp" alt="Flooring">
           <div class="job-info">
             <h3 class="job-title">Flooring Installation</h3>
-            <p>Elegant wood flooring installations that drastically transfrom
+            <p>Elegant wood flooring installations that drastically transform
               your living spaces. We offer installations over preexisting
               concrete and wood floors, ensuring the wood looks as natural as
               possible, while being durable and low maintenance. Reach out to us
@@ -69,7 +69,7 @@
             <p>Expert drywall repair and remodeling to refresh and restore interiors.
               We offer drywall repair for small blemishes, and up to entire section
               replacements, with mudding and sanding to ensure a perfect, level
-              finish ready for beatiful paint.
+              finish ready for beautiful paint.
             </p>
           </div>
         </div>
@@ -179,7 +179,7 @@
           <div class="job-info">
             <h3 class="job-title">Handywork</h3>
             <p>Need a hand with lifting, a faucet fix/replacement or anything else
-              around the house? We've got your back! We do anything from from a fix,
+              around the house? We've got your back! We do anything from a fix,
               a replacement, all the way to installations. Let us know how we can help,
               and get what you need done today in a timely manner with friendly service.
             </p>
