--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
 
   <!-- HERO -->
   <header class="hero">
-    <div class="hero-content" data-aos="zoom-in-up">
+    <div class="hero-content">
       <div class="logo-container" data-aos="zoom-in-up">
         <img src="images/AeroLogo.webp" alt="Aero Home Logo" />
       </div>
-      <div class="text-container" data-aos="zoom-in-up">
+      <div class="text-container">
         <h1>LANDSCAPING | RENOVATION | INSTALLATIONS</h1>
       </div>
     </div>
 
-    <div class="scroll-prompt" data-aos="zoom-in-up" aria-label="Scroll down prompt">
-      <div class="scroll-arrow" data-aos="zoom-in-up" aria-hidden="true">↓</div>
+    <div class="scroll-prompt" aria-label="Scroll down prompt">
+      <div class="scroll-arrow" aria-hidden="true">↓</div>
     </div>
   </header>
 
   <!-- MISSION -->
-  <section class="mission" data-aos="zoom-in-up">
+  <section class="mission">
     <!-- Title stays on top -->
-    <h1 class="mission-title" data-aos="zoom-in-up">
+    <h1 class="mission-title">
       ABOUT <span class="highlight-keyword2">US</span>
     </h1>
 
     <!-- Flex container for image and text -->
-    <div class="mission-body" data-aos="zoom-in-up">
+    <div class="mission-body">
       <!-- Left: Image -->
       <div class="mission-image">
-        <img src="images/missionphoto.webp" alt="Mission Image" data-aos="zoom-in-up">
+        <img src="images/missionphoto.webp" alt="Mission Image">
       </div>
 
       <!-- Right: Text -->
@@ -61,39 +61,38 @@
 
   <!-- SERVICES -->
   <section class="services">
-    <h1 class="services-title" data-aos="zoom-in-up">OUR <span class="highlight-keyword3"
-        data-aos="zoom-in-up">SERVICES</span></h1>
+    <h1 class="services-title">OUR <span class="highlight-keyword3">SERVICES</span></h1>
 
     <div class="services-row-one">
       <div class="service-card">
-        <img src="images/job1.webp" alt="Job 1" class="service-image" data-aos="zoom-in-up" />
+        <img src="images/job1.webp" alt="Job 1" class="service-image" />
         <p class="service-description">DRYWALL & PAINTING</p>
       </div>
 
       <div class="service-card">
-        <img src="images/job2.webp" alt="Job 2" class="service-image" data-aos="zoom-in-up" />
+        <img src="images/job2.webp" alt="Job 2" class="service-image" />
         <p class="service-description">FLOORING</p>
       </div>
     </div>
     <div class="services-row-two">
       <div class="service-card">
-        <img src="images/job3.webp" alt="Job 1" class="service-image" data-aos="zoom-in-up" />
-        <p class="service-description">SOD & LADNDSCAPING</p>
+        <img src="images/job3.webp" alt="Job 1" class="service-image" />
+        <p class="service-description">SOD & LANDSCAPING</p>
       </div>
 
       <div class="service-card">
-        <img src="images/job4.webp" alt="Job 2" class="service-image" data-aos="zoom-in-up" />
+        <img src="images/job4.webp" alt="Job 2" class="service-image" />
         <p class="service-description">UNDERGROUND SPRINKLERS</p>
       </div>
     </div>
     <div class="services-row-three">
       <div class="service-card">
-        <img src="images/job5.webp" alt="Job 1" class="service-image" data-aos="zoom-in-up" />
+        <img src="images/job5.webp" alt="Job 1" class="service-image" />
         <p class="service-description">HANDYWORK</p>
       </div>
 
       <div class="service-card">
-        <img src="images/job6.webp" alt="Job 2" class="service-image" data-aos="zoom-in-up" />
+        <img src="images/job6.webp" alt="Job 2" class="service-image" />
         <p class="service-description">SEASONAL CLAEANING</p>
       </div>
     </div>
@@ -101,10 +100,10 @@
 
 
   <!-- CONTACT -->
-  <section class="contact" data-aos="zoom-in-up">
+  <section class="contact">
     <h2>Contact Us</h2>
 
-    <div class="contact-info-row" data-aos="zoom-in-up">
+    <div class="contact-info-row">
       <a class="contact-box" href="tel:4036356840">
         <h4><i class="fas fa-phone"></i></h4>
         <p>(403) 635 6840</p>
@@ -113,25 +112,24 @@
         <h4><i class="fas fa-envelope"></i></h4>
         <p>aerohomerenovations@gmail.com</p>
       </a>
-      <a class="contact-box" href="https://facebook.com" target="_blank">
+      <a class="contact-box" href="https://www.facebook.com/people/Aero-Home-Company/61577840212272/#" target="_blank">
         <h4><i class="fab fa-facebook-f"></i></h4>
-        <p>Facebook</p>
+        <p>Facebook Page</p>
       </a>
-      <a class="contact-box" href="https://instagram.com" target="_blank">
-        <h4><i class="fab fa-instagram"></i></h4>
-        <p>Instagram</p>
+      <a class="contact-box" href="https://google.com" target="_blank">
+        <h4><i class="fab fa-google"></i></h4>
+        <p>Google Business</p>
       </a>
     </div>
 
-    <form data-aos="zoom-in-up" action="https://formsubmit.co/aerohomerenovations@gmail.com" method="POST">
+    <form action="https://formsubmit.co/aerohomerenovations@gmail.com" method="POST">
       <h3>Get A Quote</h3>
-      <p data-aos="zoom-in-up" class="contact-subtitle">No obligations - it's free!</p>
-      <input data-aos="zoom-in-up" type="text" name="name" placeholder="Your Name" required />
-      <input data-aos="zoom-in-up" type="email" name="email" placeholder="Your Email" required />
-      <input data-aos="zoom-in-up" type="tel" name="phone" placeholder="Your Phone Number (Optional - Preferred)" />
-      <textarea data-aos="zoom-in-up" name="message" placeholder="Your Message (Please be detailed)"
-        required></textarea>
-      <button data-aos="zoom-in-up" type="submit">Send Message</button>
+      <p class="contact-subtitle">No obligations - it's free!</p>
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <input type="tel" name="phone" placeholder="Your Phone Number (Optional - Preferred)" />
+      <textarea name="message" placeholder="Your Message (Please be detailed)"required></textarea>
+      <button type="submit">Send Message</button>
     </form>
   </section>
 
@@ -151,12 +149,6 @@
 
   <!-- AOS Script -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init({
-      duration: 1000,
-      once: true
-    });
-  </script>
   <script src="script.js"></script>
 </body>
 
